--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsontoxml": "^1.0.1",
     "source-map-support": "^0.5.16",
     "tough-cookie": "^4.0.0",
+    "tslib": "^2.6.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
